feat: add clean data service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,17 @@ services:
     image: davidedomini99/experiment-fbfl-pm10:latest
     volumes:
       - ./results:/experiment/results:rw
+
+  clean-results:
+    depends_on:
+      prepare:
+        condition: service_completed_successfully
+      learning:
+        condition: service_completed_successfully
+    image: danysk/kotlin:1.9.22-jdk18
+    volumes:
+      - .:/experiment:rw
+      - ./scripts:/scripts:rw
+      - ./data:/data
+      - ./results:/results
+    command: scripts/clean-results.kts
