feat: add chart service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,15 @@ services:
       - ./data:/data
       - ./results:/results
     command: scripts/clean-results.kts
+
+  charts:
+    depends_on:
+      clean-results:
+        condition: service_completed_successfully
+    image: davidedomini99/pm10-plotter
+    build:
+      dockerfile: ./docker/charts/Dockerfile
+      context: .
+    volumes:
+      - ./data:/experiment/data:rw
+      - ./charts:/experiment/charts:rw
