--- a/docker/charts/Dockerfile
+++ b/docker/charts/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:latest
 RUN mkdir /experiment
 WORKDIR /experiment
-COPY plotter.py ./
-COPY requirements.txt ./
+COPY docker/charts/plotter.py ./
+COPY docker/charts/requirements.txt ./
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 CMD python plotter.py
